# get-will-hired

./: .env.example  .gitignore  LOB_TCN_DESIGN.md  LOB_TCN_OVERVIEW.md  README.md  pyproject.toml
configs/: base.yaml  tcn_large.yaml  tcn_small.yaml
data/: ablation_results.json  ablation_results.md  backtest_results.json  latency_benchmark.json
notebooks/: 01_data_exploration.ipynb  02_feature_analysis.ipynb  03_model_ablation.ipynb  04_backtest_analysis.ipynb
scripts/: build_dataset.py  download_data.sh  run_ablation.py  run_backtest.py  run_backtest.sh  run_server.sh  run_training.sh  train.py
src/: __init__.py
src/backtest/: __init__.py  engine.py  metrics.py  strategy.py
src/data/: __init__.py  feature_engineer.py  lobster_loader.py  stream_simulator.py  synthetic.py
src/models/: __init__.py  baselines.py  tcn.py  train.py
src/monitoring/: __init__.py  dashboard.py  drift.py
src/serving/: __init__.py  api.py  latency_bench.py  predictor.py
tests/: test_api.py  test_backtest_engine.py  test_baselines.py  test_drift.py  test_feature_engineer.py  test_lobster_loader.py  test_stream_simulator.py  test_synthetic.py  test_tcn.py  test_train.py
